@@ -106,9 +106,9 @@ public class JCpgEditor_crop extends JCpgEditor implements MouseMotionListener {
 	 * @param previewSize
 	 * 		size of preview JPanel
 	 */
-	public JCpgEditor_crop(JCpgUI jCpgUIReference, JCpgPicture picture, Dimension previewPosition, Dimension previewSize){
+	public JCpgEditor_crop(JCpgUI jCpgUIReference, JCpgPicture picture, Dimension previewPosition, Dimension previewSize, int listIndex){
 		
-		super(jCpgUIReference, picture, previewPosition, previewSize);
+		super(jCpgUIReference, picture, previewPosition, previewSize, listIndex);
 		
 		doExtraSwingComponents();
 		
@@ -270,6 +270,9 @@ public class JCpgEditor_crop extends JCpgEditor implements MouseMotionListener {
 			
 			// save this new information
 			new JCpgGallerySaver(getJCpgUI().getGallery()).saveGallery();
+			
+			getJCpgUI().getPictureList().remove(getListIndex());
+			getJCpgUI().getPictureListModel().add(getListIndex(), getPicture());
             
             getJCpgUI().setEnabled(true);
             this.dispose();
